reserve-action-white | fix img wrapper, tab-menu | remove strawberry on tablets

--- a/src/style-white/sections/_tab-menu--white.scss
+++ b/src/style-white/sections/_tab-menu--white.scss
@@ -220,6 +220,10 @@
     width: 100%;
   }
 
+  .tab-menu__bg_strawberry {
+    display: none;
+  }
+
 }
 
 
