--- a/src/style-white/sections/reserve/_reserve-main--white.scss
+++ b/src/style-white/sections/reserve/_reserve-main--white.scss
@@ -93,6 +93,7 @@ input::-webkit-clear-button {
   padding: 15px 0;
   font-size: 22px;
   font-weight: 700;
+  cursor: pointer;
 }
 
 
